# Jackal

./: CMakeLists.txt  JSON-scheme.md  README.md  main.cpp
client/: CMakeLists.txt
client/include/: AuthorizationWidget.h  EventWidget.h  ExitLabel.h  FieldWidget.h  GameStartLabel.h  MainMenuWidget.h  PirateContainer.h  PirateWidget.h  ShipWidget.h  client.h  contoller.h  controller.h
client/src/: EventWidget.cpp  FieldWidget.cpp  ShipWidget.cpp  client.cpp  controller.cpp  main.cpp
data/: events.txt
include/: EventWidget.h  FieldWidget.h  GameStartLabel.h  MainGame.h  MainMenuWidget.h  allEvents.h  event.h  field.h  fwd.h  game.h  pirate.h  player.h  settings.h  ship.h
include/events/: balloon.h  barrel.h  ben.h  boat.h  cannon.h  cart.h  cave.h  coins.h  crocodile.h  earthquake.h  emptyEvent.h  fortress.h  friday.h  grass.h  horse.h  ice.h  jungle.h  kernels.h  lighthouse.h  missionary.h  multiPointer.h  ogre.h  plane.h  rum.h  simplePointer.h  spinner.h  trap.h  treasure.h  water.h
include/gui/: EventWidget.h  ExitLabel.h  FieldWidget.h  GameStartLabel.h  MainGame.h  MainMenuWidget.h  PirateWidget.h  ShipWidget.h
server/: CMakeLists.txt
server/include/: allEvents.h  event.h  field.h  fwd.h  game.h  handler.h  pirate.h  player.h  server.h  settings.h  ship.h  thread.h
server/include/events/: balloon.h  barrel.h  ben.h  cannon.h  cave.h  coins.h  crocodile.h  earthquake.h  emptyEvent.h  fortress.h  friday.h  grass.h  healer.h  horse.h  ice.h  jungle.h  lighthouse.h  missionary.h  multiPointer.h  ogre.h  plane.h  rum.h  simplePointer.h  spinner.h  trap.h  treasure.h  water.h
server/src/: event.cpp  field.cpp  game.cpp  handler.cpp  main.cpp  pirate.cpp  player.cpp  server.cpp  settings.cpp  ship.cpp  thread.cpp
server/src/events/: balloon.cpp  barrel.cpp  cannon.cpp  coins.cpp  crocodile.cpp  emptyEvent.cpp  fortress.cpp  healer.cpp  horse.cpp  ice.cpp  jungle.cpp  multiPointer.cpp  ogre.cpp  plane.cpp  rum.cpp  simplePointer.cpp  spinner.cpp  treasure.cpp  water.cpp
server/test/: logic_test.cpp
src/: EventWidget.cpp  FieldWidget.cpp  MainGame.cpp  MainMenuWidget.cpp  event.cpp  field.cpp  game.cpp  main.cpp  pirate.cpp  player.cpp  settings.cpp  ship.cpp
src/events/: fortress.cpp  horse.cpp  ogre.cpp  simplePointer.cpp  spinner.cpp
