cmake_minimum_required(VERSION 3.10)
project(JackalUI)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_PREFIX_PATH "C://Qt//5.15.2//mingw81_64")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "C://Qt//5.15.2//mingw81_64//bin")

set(CMAKE_SOURCE_DIR src)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5 COMPONENTS Network REQUIRED)
include_directories(server/include server/src client/src client/include server/include/events client/include client/src data)

set(HEADERS_CLIENT client/include/EventWidget.h client/include/FieldWidget.h client/include/MainMenuWidget.h client/include/client.h client/include/GameStartLabel.h client/include/ExitLabel.h client/include/PirateWidget.h client/include/ShipWidget.h client/include/PirateContainer.h client/include/contoller.h)
#set(HEADERS_LOGIC include/pirate.h include/ship.h include/events/simplePointer.h)
set(SOURCE_CLIENT client/src/main.cpp client/src/FieldWidget.cpp client/src/MainMenuWidget.cpp client/src/MainGame.cpp client/src/controller.cpp)
set(HEADERS_SERVER server/include/pirate.h server/include/ship.h)
set(SOURCE_SERVER server/src/events/fortress.cpp server/src/events/horse.cpp server/src/events/ice.cpp server/src/events/ogre.cpp server/src/events/simplePointer.cpp server/src/events/spinner.cpp server/src/event.cpp server/src/field.cpp server/src/game.cpp server/src/pirate.cpp server/src/player.cpp server/src/server.cpp server/src/settings.cpp server/src/ship.cpp server/src/events/coins.cpp server/src/events/rum.cpp)
set(SOURCE_LOGIC server/src/events/fortress.cpp server/src/events/horse.cpp server/src/events/ice.cpp server/src/events/ogre.cpp server/src/events/simplePointer.cpp server/src/events/spinner.cpp server/src/event.cpp server/src/field.cpp server/src/game.cpp server/src/pirate.cpp server/src/player.cpp server/src/settings.cpp server/src/ship.cpp server/src/events/coins.cpp server/src/events/rum.cpp server/src/events/water.cpp server/src/events/crocodile.cpp server/src/events/jungle.cpp)
add_executable(JackalClient ${HEADERS_CLIENT} ${SOURCE_CLIENT})
add_executable(JackalServer server/include/server.h server/src/server.cpp server/src/main.cpp ${HEADERS_SERVER} ${SOURCE_SERVER} ${SOURCE_LOGIC})
add_executable(JackalLogicOnly main.cpp ${SOURCE_LOGIC})
#add_executable(JackalUI ${HEADERS_LOGIC} ${HEADERS_GUI} ${SOURCE_LOGIC} ${SOURCE_GUI})
target_link_libraries(JackalClient Qt5::Widgets)
target_link_libraries(JackalClient Qt5::Network)
target_link_libraries(JackalServer Qt5::Widgets)
target_link_libraries(JackalServer Qt5::Network)
